<resources>
    <string name="app_name">Rep Check</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save Set</string>
    <string name="action_settings">Settings</string>
    <string name="undobar_sample_message">Slot saved.</string>
    <string name="lorem_ipsum_sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="brandt_name">Brandt Newton</string>
    <string name="brandt_email">brandt.software@gmail.com</string>
    <string name="brandt_website">http://brandtnewton.com</string>
    <string name="brandt_resume">http://brandtnewton.com/resume2015.pdf</string>
    <string name="konnor_name">Konnor Newton</string>
    <string name="konnor_email">newtonk@husson.edu</string>

    <!-- Actions -->
    <string name="undo">Undo</string>
    <string name="close">close</string>

    <!-- Dialog About -->
    <string name="website">website</string>
    <string name="email">email</string>
    <string name="resume">resume</string>

    <!-- Dialog Bar Load -->
    <string name="bar_load_title">Bar Load</string>
    <string name="total_weight">Total Weight</string>
    <string name="bar_weight">Bar Weight</string>
    <string name="remainder">Remainder</string>
    <string name="title_activity_tutorial">Tutorial</string>

    <string name="hello_world">Hello world!</string>
</resources>
