<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:background="@color/primary_400"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Bar Load"
        style="@style/dialog_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="@dimen/tiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/total_weight"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/total_weight"
            android:textSize="16sp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="@dimen/tiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/bar_weight"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/bar_weight"
            android:textSize="16sp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="@dimen/standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/remainder"
            android:textSize="16sp"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/tiny"
            android:textSize="16sp"
            android:id="@+id/weight_remainder"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/disabled_text"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <ListView
        android:id="@+id/plate_list"
        android:layout_width="match_parent"
        android:layout_height="110dp"/>

    <Button
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:padding="0dp"
        android:textColor="@color/primary_900"
        android:textAllCaps="true"
        android:text="@string/close"
        style="?android:attr/borderlessButtonStyle"
        />
</LinearLayout>