<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primary_400"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<ScrollView
    android:layout_weight="1"
    android:layout_height="0dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/app_name"
        android:src="@drawable/rep_check_brand_outline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:layout_width="fill_parent"
        android:scaleType="fitCenter"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/version"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="30dp"
        android:text="Creator, Designer &amp; Developer"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <TextView
        android:textSize="14sp"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginLeft="@dimen/standard"
        android:text="Created, designed and developed Rep Check"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <TextView
        android:textSize="18sp"
        android:layout_margin="@dimen/standard"
        android:text="@string/brandt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/brandt_website_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:clickable="true"
            android:src="@drawable/ic_globe"
            android:tint="@color/primary_700"
            app:fabSize="mini"
            app:borderWidth="0dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/brandt_resume_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:clickable="true"
            android:src="@drawable/ic_document"
            android:tint="@color/primary_700"
            app:fabSize="mini"
            app:borderWidth="0dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/brandt_email_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:clickable="true"
            android:src="@drawable/ic_mail"
            android:tint="@color/primary_700"
            app:fabSize="mini"
            app:borderWidth="0dp" />

    </LinearLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:text="Graphic Designer"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:textSize="14sp"
            android:layout_marginTop="@dimen/tiny"
            android:layout_marginLeft="@dimen/standard"
            android:text="Created Rep Check logos and contributed to UX"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:textSize="18sp"
            android:layout_margin="@dimen/standard"
            android:text="@string/konnor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/konnor_email_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:clickable="true"
            android:src="@drawable/ic_mail"
            android:tint="@color/primary_700"
            app:fabSize="mini"
            app:borderWidth="0dp" />

    </LinearLayout>
</LinearLayout>
</ScrollView>

<Button
android:id="@+id/close_btn"
android:layout_width="match_parent"
android:layout_height="@dimen/dialog_button_height"
android:padding="0dp"
android:textColor="@color/primary_900"
android:text="CLOSE"
style="?android:attr/borderlessButtonStyle"
    />
</LinearLayout>